# advanced_patterns

policy_adapter/: CMakeLists.txt  DeletionPolicy.h  SmartPtr.h  main.cpp
